# kado

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
kado/: Makefile  __init__.py  anki.py  audio.py  cli.py  config.py  debug.py  dictionary.py  models.py  ollama_utils.py  pdf_import.py  sentences.py
tests/: test_cli.py  test_config.py  test_pdf_import.py  test_sentences.py
